<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/escanear"
            android:icon="@drawable/ic_qr"
            android:title="@string/qr"
            android:checked="true"/>
        <item
            android:id="@+id/horarios"
            android:icon="@drawable/ic_timetables"
            android:title="@string/horatioytarifa" />
        <item
            android:id="@+id/expo"
            android:icon="@drawable/ic_hourglass"
            android:title="@string/expo" />
        <item
            android:id="@+id/mapa"
            android:icon="@drawable/ic_map"
            android:title="@string/mapa" />

    </group>

    <item
        android:id="@+id/ayuda"
        android:icon="@drawable/ic_help"
        android:title="@string/menu_help" />

</menu>
