<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="rafalex.pdm.ugr.parquedelasciencias.InformacionGeneralFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/fecha_entrada"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="27/06/2017"
            android:textAlignment="center"
            android:textSize="40sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/estado_entrada"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Proximamente"
            android:textAlignment="center"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/planetario_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:padding="20dp"
            android:layout_margin="20dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="20dp"
                android:src="@drawable/planetarium"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/planetario"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/hora_planetario"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="6dp"
                android:text="10:01"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/alarma_planetario"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/ic_alarm_off"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/biodome_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:padding="20dp"
            android:layout_margin="20dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="20dp"
                android:src="@drawable/biodome"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/biodomo"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/hora_biodomo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="6dp"
                android:text="10:01"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/alarma_biodomo"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/ic_alarm_off"/>
        </LinearLayout>

        <Button
            android:id="@+id/eliminarEntrada"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/borrar"/>
    </LinearLayout>
</ScrollView>
