<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="rafalex.pdm.ugr.parquedelasciencias.InformacionGeneralFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:gravity="center_vertical"
            android:padding="20dp"
            android:layout_margin="20dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="20dp"
                android:src="@drawable/entrada"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/entrada"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="6dp"
                android:text="10:00 - 19:00"
                android:textSize="18sp" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/planetario_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:gravity="center_vertical"
            android:padding="20dp"
            android:layout_margin="20dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="20dp"
                android:src="@drawable/planetarium"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/planetario"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/hora_planetario"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="6dp"
                android:text="10:01"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/alarma_planetario"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/ic_alarm_add"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/biodomo_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:gravity="center_vertical"
            android:padding="20dp"
            android:layout_margin="20dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="20dp"
                android:src="@drawable/biodome"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/biodomo"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/hora_biodomo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="6dp"
                android:text="10:01"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/alarma_biodomo"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/ic_alarm_add"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/torre_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:gravity="center_vertical"
            android:padding="20dp"
            android:layout_margin="20dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="20dp"
                android:src="@drawable/torre_icono"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/torre"
                android:textSize="25sp"
                android:textStyle="bold" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="6dp"
                    android:text="11:00 - 14:00"
                    android:textSize="18sp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="6dp"
                    android:text="17:00 - 18:30"
                    android:textSize="18sp" />
            </LinearLayout>

            <ImageView
                android:id="@+id/alarma_torre"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/ic_alarm_add"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/aves_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:gravity="center_vertical"
            android:padding="20dp"
            android:layout_margin="20dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="20dp"
                android:src="@drawable/ave"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ave"
                android:textSize="25sp"
                android:textStyle="bold" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="6dp"
                    android:text="11:45"
                    android:textSize="18sp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="6dp"
                    android:text="17:45"
                    android:textSize="18sp" />
            </LinearLayout>

            <ImageView
                android:id="@+id/alarma_aves"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/ic_alarm_add"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/mariposario_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:gravity="center_vertical"
            android:padding="20dp"
            android:layout_margin="20dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="20dp"
                android:src="@drawable/mariposa"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/mariposa"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="6dp"
                android:text="11:00 - 18:30"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/alarma_mariposas"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/ic_alarm_add"/>
        </LinearLayout>

    </LinearLayout>
</ScrollView>
